--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+--extra-index-url https://download.pytorch.org/whl/cu113
+torch==1.12.0+cu113
+torchvision==0.13.0+cu113
 imageio==2.19.3
 opencv-python==4.6.0.66
-tensorboardX==2.2
+tensorboardX==2.6.2.2
+tensorboard==2.14.0
 einops==0.4.1
 scikit-learn==1.1.1
 matplotlib==3.5.1
 protobuf==3.20.0
 fire==0.4.0
 moviepy==1.0.3
+numpy==1.23.5
